2007-05-29 13:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSetCostFunction) introduced new cost function
	gridCOST_FCN_CONFORMITY.

2007-05-29 13:30 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridMatrixMultiplyM) multi two symm matrix.
	* src/gridmath.c (gridInverseM) invert symm matrix.

2007-05-29 11:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridImpliedMetric) imply metric from tet node xyz.

2007-05-24 15:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCollapseEdge) use gridGeometryBetweenFace test
	instead of gridGeometryEdge to prevent pulling a node off a
	faux geom edge.

2007-05-24 16:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportAdapt) read nnode on first line.

2007-05-24 14:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportGRI) to ignore optional element type flag
	that was missing from .gri file.

2007-05-24 10:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportGRI) added for ProjectX adaptatation.

2007-04-16  9:25 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am (faux_input) added faux_input to EXTRA_DIST.

2007-04-13 14:55 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridedge_) fixed transposition of arguments
	to gridNodeT so that the t values are correct. (They where set to
	DBL_MAX because requested edgeId was not found at node.) 

2007-04-11 15:23 Mike Park  <mike.park@nasa.gov>

	* Made 1.3.1 Release. GTech release. Includes quick bug fix for the
	intersection of projection, gridmove and frozen boundary layer.

2007-04-11 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) skip node projection
	displacement calculation if node is frozen. (reported by Karen Bibb)
	* src/gridmove.c (gridmoveProjectionDisplacements) set frozen
	node displacements to zero and skip gridNodeProjectionDisplacement
	call. (reported by Karen Bibb)

2007-04-06  8:40 Mike Park  <mike.park@nasa.gov>
